# streamlit_test

./: README.md  pyproject.toml
src/dummy_streamlit/: old_fct.py  script.py
