[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummy-streamlit"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "streamlit",
  "pandas",
]


[project.urls]
Documentation = "https://github.com/U.N. Owen/dummy-streamlit#readme"
Issues = "https://github.com/U.N. Owen/dummy-streamlit/issues"
Source = "https://github.com/U.N. Owen/dummy-streamlit"

[tool.hatch.version]
path = "src/dummy_streamlit/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dummy_streamlit tests}"

[tool.poetry]
name = "streamlit_test"
version = "0.1.0"

[tool.coverage.run]
source_pkgs = ["dummy_streamlit", "tests"]
branch = true
parallel = true
omit = [
  "src/dummy_streamlit/__about__.py",
]

[tool.coverage.paths]
dummy_streamlit = ["src/dummy_streamlit", "*/dummy-streamlit/src/dummy_streamlit"]
tests = ["tests", "*/dummy-streamlit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
